--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <section class="learn-more">
       <h2 class="visually-hidden">узнать о наших подходах больше</h2>
       <ul class="learn-more__list list">
-        <li class="learn-more__item">
+        <li class="learn-more__item learn-more__item--long">
           <p class="learn-more__caption">Долго, дорого, скрупулезно.</p>
-          <p class="learn-more__text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <p class="learn-more__text">Математически выверенный дизайн <br> для вашего сайта или мобильного приложения.</p>
           <a href="#" class="learn-more__btn link">Узнать больше</a>
         </li>
-        <li class="learn-more__item">
+        <li class="learn-more__item learn-more__item--math">
           <p class="learn-more__caption">Любим математику как никто другой.</p>
           <p class="learn-more__text">Никакого креатива, только математические формулы для расчета идеальных пропорций.
           </p>
           <a href="#" class="learn-more__btn link">Узнать больше</a>
         </li>
-        <li class="learn-more__item">
+        <li class="learn-more__item learn-more__item--night">
           <p class="learn-more__caption">Только ночь, только хардкор</p>
           <p class="learn-more__text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
             начинается..</p>
@@ -58,22 +58,22 @@
       <h2 class="visually-hidden">наши услуги</h2>
       <ul class="services__list list">
         <li class="services__item">
-          <img src="img/services-web.png" alt="">
+          <img class="services__img" src="img/services-web.png" alt="">
           <h3 class="services__title">Веб-сайты</h3>
           <p class="services__text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <button class="services__btn" type="button">Заказать</button>
+          <button class="services__btn services__btn--web" type="button">Заказать</button>
         </li>
         <li class="services__item">
-          <img src="img/services-app.png" alt="">
+          <img class="services__img" src="img/services-app.png" alt="">
           <h3 class="services__title">Приложения</h3>
-          <p class="services__text">МПокорите топ-10 приложений в AppStore и Google Play</p>
-          <button class="services__btn" type="button">Заказать</button>
+          <p class="services__text">Покорите топ-10 приложений в AppStore и Google Play</p>
+          <button class="services__btn services__btn--app" type="button">Заказать</button>
         </li>
         <li class="services__item">
-          <img src="img/services-prezi.png" alt="">
+          <img class="services__img" src="img/services-prezi.png" alt="">
           <h3 class="services__title">Презентации</h3>
           <p class="services__text">Вы даже не подозреваете, насколько вы изумительны!</p>
-          <button class="services__btn" type="button">Заказать</button>
+          <button class="services__btn services__btn--prezi" type="button">Заказать</button>
         </li>
 
       </ul>
