add some style in index

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section class="about">
       <h2 class="visually-hidden">Информация о студии</h2>
       <div class="about__description">
-        <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p class="about__title">Мы — маленькая, но гордая <br> дизайн-студия из Краснодара.</p>
         <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
           Работаем не покладая рук, как роботы.</p>
       </div>
@@ -97,14 +97,14 @@
       <table class="about__table table">
         <caption class="table__caption">с 2004 года Любим точность во всем:</caption>
         <tr>
-          <th>146%</th>
-          <th>100%</th>
-          <th>50%</th>
+          <th class="table__value">146<span class="table__percent">%</span></th>
+          <th class="table__value">100<span class="table__percent">%</span></th>
+          <th class="table__value">50<span class="table__percent">%</span></th>
         </tr>
         <tr>
-          <td>Уровень самоотдачи</td>
-          <td>Соблюдение сроков</td>
-          <td>Минимальная предоплата</td>
+          <td class="table__item">Уровень самоотдачи</td>
+          <td class="table__item">Соблюдение сроков</td>
+          <td class="table__item">Минимальная предоплата</td>
         </tr>
 
       </table>
@@ -153,9 +153,11 @@
       </li>
     </ul>
 
-    <p class="footer__friends">Давайте дружить, это выгодно!</p>
-    <p class="footer__text">Скидка 10% для друзей из социальных сетей.</p>
+<div class="footer__description">
+      <p class="footer__friends">Давайте дружить, это выгодно!</p>
+      <p class="footer__text">Скидка 10% для друзей из социальных сетей.</p>
 
+</div>
   </footer>
 </body>
 
