--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
     </section>
 
     <section class="map">
-      <img class="map__img" src="img/map-with-marker.jpg" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+      <div class="map__block" id="map" style="width: 1440px; height: 416px">
+        <!-- <img class="map__img" src="img/map-with-marker.jpg" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8" width="1440" height="416"> -->
+      </div>
+     
     </section>
 
   </main>
@@ -172,6 +175,9 @@
 
     </div>
   </footer>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=593a6acd-cf54-4663-a17e-91b99212dd90&lang=ru_RU" type="text/javascript">
+  </script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
