add catalog__list style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="header__nav list">
         <li class="header__item"><a href="#" class="header__link link">Студия</a></li>
         <li class="header__item"><a href="#" class="header__link link">Клиенты</a></li>
-        <li class="header__item"><a href="#" class="header__link link">Магазин</a></li>
+        <li class="header__item"><a href="catalog.html" class="header__link link">Магазин</a></li>
         <li class="header__item"><a href="#" class="header__link link">Контакты</a></li>
       </ul>
       <button class="header__cart" type="button">Корзина</button>
