fix: change input type

--- a/catalog.html
+++ b/catalog.html
@@ -53,10 +53,10 @@
             </div>
             <div class="cost__controls">
               <label class="cost__label cost__min">
-                от <input class="cost__input cost__input--min" type="number" name="min-price" value="0">
+                от <input class="cost__input cost__input--min" type="text" name="min-price" value="0">
               </label>
               <label class="cost__label cost__max">
-                до <input class="cost__input cost__input--max" type="number" name="max-price" value="15000">
+                до <input class="cost__input cost__input--max" type="text" name="max-price" value="15000">
               </label>
             </div>
           </div>
